--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-context-api": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13"
   },
